--- a/css/ystyle.css
+++ b/css/ystyle.css
@@ -1085,7 +1085,7 @@ transform: scale(1.2)
 }
 
 .y-nong-box3>.y-nong-body2>ul>li:hover .y-nong-text>.y-text-left>p {
-    color: #5966d1;
+    color: #16884a;
 }
 
 .y-nong-box3>.y-nong-body2>ul>li>h3 {
@@ -1166,13 +1166,13 @@ transform: scale(1.2)
     width: 100%;
     margin: 0 auto;
 }
-.y-nong-box5>.y-nong-title4 {
+.y-nong-box5>.y-nong-title5 {
     width: 1200px;
     height: 100px;
     margin: 0 auto;
 }
 
-.y-nong-box4>.y-nong-title5>div {
+.y-nong-box5>.y-nong-title5>div {
     width: 300px;
     height: 100px;
     line-height: 100px;
@@ -1206,10 +1206,13 @@ transform: scale(1.2)
 }
 .y-nong-box5>.y-nong-body5>ul>li>div{
     float: left;
-    height: 300px;
+    height: 400px;
 }
 .y-nong-box5>.y-nong-body5>ul>li>.y-nong-tu{
     width: 40%;
+}
+.y-nong-box5>.y-nong-body5>ul>li>.y-nong-tu>img{
+    width:100%;
 }
 .y-nong-box5>.y-nong-body5>ul>li>.y-nong-zi{
     width: 55%;
