--- a/css/ystyle.css
+++ b/css/ystyle.css
@@ -1272,7 +1272,7 @@ transform: scale(1.2)
 }
 .y-nong-box6>.y-nong-body6>ul>li{
     width:100%;
-    width:450px;
+    height:450px;
     margin:80px 0;
 }
 .y-nong-box6>.y-nong-body6>ul>li>.y-nong-tu{
