--- a/css/wstyle.css
+++ b/css/wstyle.css
@@ -442,6 +442,7 @@ nav:hover {
     margin: 0 20px;
     height: 710px;
     border: 1px solid rgb(163, 160, 160, .5);
+    overflow: hidden;
 }
 .w-index-banner-ul>li:hover img{
     transition: all 0.5s ease 0s;
