--- a/css/wstyle.css
+++ b/css/wstyle.css
@@ -539,6 +539,7 @@ nav:hover {
     height: 500px;
     cursor: pointer;
 }
+
 .w-index-box5>.w-index-content>.w-index-news>a{
     text-decoration: none;
 }
@@ -561,6 +562,7 @@ nav:hover {
 .w-index-box5>.w-index-content>.w-index-news>a>p {
     font-size: 17px;
     overflow: hidden;
+    color:#666666;
     text-overflow: ellipsis;
     display: -moz-box;
     -moz-line-clamp: 2 !important;
@@ -568,9 +570,11 @@ nav:hover {
     white-space: pre-wrap;
     display: -webkit-box;
     -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical
+    -webkit-box-orient: vertical;
 }
-
+.w-index-box5>.w-index-content>.w-index-news:hover a>p{
+    color:#4990ff;
+}
 .w-index-box5>.w-index-content>.w-index-more {
     float: right;
     width: 57%;
@@ -622,6 +626,7 @@ nav:hover {
 .w-index-box5>.w-index-content>.w-index-more>.w-index-ul>.w-index-new-context>a>p {
     font-size: 24px;
     overflow: hidden;
+    color:#666666;
     text-overflow: ellipsis;
     display: -moz-box;
     -moz-line-clamp: 2 !important;
@@ -632,7 +637,9 @@ nav:hover {
     -webkit-box-orient: vertical;
     line-height:1.5;
 }
-
+.w-index-box5>.w-index-content>.w-index-more>.w-index-ul>.w-index-new-context:hover a>p{
+    color:#4990ff;
+}
 .w-index-box5>.w-index-content>.w-index-more>.w-index-btn {
     width: 150px;
     height: 40px;
@@ -2854,7 +2861,7 @@ nav:hover {
 .w-right-fixed>a>div{
     width: 60px;
     height: 60px;
-    box-shadow: 0 0 2px rgb(163, 160, 160, .5);
+    box-shadow: 0 0 2px rgb(170, 170, 170);
     background: #fff;
     transition: all 0.3s ease 0s;
     overflow: hidden;
@@ -2879,4 +2886,36 @@ nav:hover {
 }
 .w-right-fixed>a>div:hover{
     width: 160px;
+}
+
+.w-right-fixed>div{
+    width: 60px;
+    height: 60px;
+    box-shadow: 0 0 2px rgb(170, 170, 170);
+    background: #fff;
+    overflow: hidden;
+    position: relative;
+}
+.w-right-fixed>div>div{
+    float: left;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    line-height: 60px;
+}
+.w-right-fixed>div>.tu1{
+    display: block;
+}
+.w-right-fixed>div>.tu2{
+    display: none;
+}
+.w-right-fixed>div>div>img{
+    width: 45px;
+    height: 45px;
+}
+.w-right-fixed>div:hover .tu1{
+    display: none;
+}
+.w-right-fixed>div:hover .tu2{
+    display: block;
 }
