--- a/server/css/ystyle.css
+++ b/server/css/ystyle.css
@@ -2213,15 +2213,23 @@ transform: scale(1.2)
 }
 
 .y-ph-wu-box2>ul>li {
-    width: 23%;
+    width:85px;
+    height:85px;
     float: left;
     margin: 1% 1%;
+    text-align: center;
+    background: url(../img/s-wu/tu1.png) no-repeat;
+    background-size: 100% 100%;
 }
 
 .y-ph-wu-box2>ul>li>img {
-    width: 100%;
+    width: 25%;
+    margin-top: 15px;
 }
-
+.y-ph-wu-box2>ul>li>p{
+    color: #fff;
+    font-size: 13px;
+}
 .y-ph-wu-box3 {
     width: 100%;
     margin: 0 auto;
@@ -2258,8 +2266,45 @@ transform: scale(1.2)
 .y-ph-wu-box3>.y-ph-wu-jia>img {
     width: 100%;
 }
+.y-ph-wu-box4 {
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 40px;
+}
 
+.y-ph-wu-box4>.y-ph-wu-title {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
 
+.y-ph-wu-box4>.y-ph-wu-title>p {
+    font-size: 14px;
+    color: #000;
+    padding: 20px 0px 10px 0px;
+}
+
+.y-ph-wu-box4>.y-ph-wu-title>div {
+    width: 14%;
+    margin: 0 auto;
+    margin-top: 3%;
+    margin-bottom: 5%;
+}
+
+.y-ph-wu-box4>.y-ph-wu-title>div>img {
+    width: 60%;
+}
+.y-ph-wu-box4>ul{
+    width:90%;
+    margin:0 auto;
+}
+.y-ph-wu-box4>ul>li{
+    width:33%;
+    float:left;
+}
+.y-ph-wu-box4>ul>li>img{
+    width:100%;
+}
 /* 手机版解决方案 */
 
 .y-ph-fang-box1 {
@@ -2685,7 +2730,7 @@ transform: scale(1.2)
 }
 
 .y-ph-qu-box2>.y-ph-qu-return>a {
-    color: #298be2;
+    color: #0ba360;
     font-size: 15px;
 }
 
@@ -2718,7 +2763,6 @@ transform: scale(1.2)
     width: 90%;
     margin: 0 auto;
 }
-
 .y-ph-qu-box2>.y-ph-qu-body2>img {
     width: 100%;
 }
@@ -2757,18 +2801,36 @@ transform: scale(1.2)
     margin:0 auto;
 }
 .y-ph-qu-box3>.y-ph-qu-body3>ul>li {
-    width: 31%;
+    width: 46%;
     float: left;
-    margin: 1% 1%;
+    margin: 2% 2%;
+    box-shadow: 0 0 5px rgb(163, 160, 160, .5);
+
+    height: 200px;
+    border-radius: 10px;
+    text-align: center;
+    background: #fff;
 }
 
 .y-ph-qu-box3>.y-ph-qu-body3>ul>li>img {
-    width: 100%;
+    width: 25%;
+    margin-top: 10px
 }
-
+.y-ph-qu-box3>.y-ph-qu-body3>ul>li>h4{
+    font-weight: bold;
+    font-size: 16px;
+    padding: 10px 0 10px 0;
+}
+.y-ph-qu-box3>.y-ph-qu-body3>ul>li>p{
+    font-size: 16px;
+    padding: 5px 10px;
+    color: #666666;
+    text-align: justify;
+}
 .y-ph-qu-box4 {
     width: 100%;
     margin: 0 auto;
+    margin-bottom: 50px;
 }
 
 .y-ph-qu-box4>.y-ph-qu-title4 {
@@ -2800,18 +2862,36 @@ transform: scale(1.2)
     margin: 0 auto;
 }
 .y-ph-qu-box4>.y-ph-qu-body4>ul>li {
-    width: 31%;
+    width: 46%;
     float: left;
-    margin: 1% 1%;
+    margin: 2% 2%;
+    box-shadow: 0 0 5px rgb(163, 160, 160, .5);
+    height: 285px;
+    border-radius: 10px;
+    position: relative;
+    z-index: 0;
 }
 
 .y-ph-qu-box4>.y-ph-qu-body4>ul>li>img {
     width: 100%;
 }
-
+.y-ph-qu-box4>.y-ph-qu-body4>ul>li>h4{
+    font-weight: bold;
+    font-size: 16px;
+    text-align: center;
+    padding: 10px 20px 10px 20px;
+}
+.y-ph-qu-box4>.y-ph-qu-body4>ul>li>p{
+    font-size: 15px;
+    padding: 5px 5px;
+    color: #666666;
+    text-align: justify;
+    line-height: 20px;
+}
 .y-ph-qu-box5 {
     width: 100%;
     margin: 0 auto;
+    margin-bottom: 30px;
 }
 
 .y-ph-qu-box5>.y-ph-qu-title5 {
