--- a/server/css/ystyle.css
+++ b/server/css/ystyle.css
@@ -2213,8 +2213,8 @@ transform: scale(1.2)
 }
 
 .y-ph-wu-box2>ul>li {
-    width:85px;
-    height:85px;
+    width:23%;
+    height:76px;
     float: left;
     margin: 1% 1%;
     text-align: center;
