--- a/server/css/ystyle.css
+++ b/server/css/ystyle.css
@@ -2659,7 +2659,7 @@ transform: scale(1.2)
 .y-ph-work-box2>.y-ph-work-body>ul>li {
     width: 46%;
     float: left;
-    height:300px;
+    height:320px;
     margin: 10px 5px;
     position: relative;
     box-shadow: 0 0 5px rgb(163, 160, 160, .5);
@@ -2864,9 +2864,9 @@ transform: scale(1.2)
 .y-ph-qu-box4>.y-ph-qu-body4>ul>li {
     width: 46%;
     float: left;
-    margin: 2% 2%;
+    margin: 3% 2%;
     box-shadow: 0 0 5px rgb(163, 160, 160, .5);
-    height: 285px;
+    height: 295px;
     border-radius: 10px;
     position: relative;
     z-index: 0;
@@ -3068,6 +3068,7 @@ transform: scale(1.2)
 .y-ph-cang-box3>.y-ph-cang-body3 {
     width: 90%;
     margin: 0 auto;
+    background: #f4f8ff;
 }
 
 .y-ph-cang-box3>.y-ph-cang-body3>ul {
@@ -3080,6 +3081,7 @@ transform: scale(1.2)
     float: left;
     height: 260px;
     margin: 1% 1%;
+    background: #fff;
 }
 .y-ph-cang-box3>.y-ph-cang-body3>ul>li>img{
     width:100%;
@@ -3099,6 +3101,7 @@ transform: scale(1.2)
 .y-ph-cang-box4 {
     width: 100%;
     margin: 0 auto;
+    margin-bottom: 20px;
 }
 
 .y-ph-cang-box4>.y-ph-cang-title4 {
@@ -3132,9 +3135,9 @@ transform: scale(1.2)
 .y-ph-cang-box4>.y-ph-cang-body4>ul>li {
     width: 46%;
     float: left;
-    /* height:340px; */
     height:140px;
     margin: 2% 1%;
+     box-shadow: 0 0 3px rgb(163, 160, 160, .5);
 }
 .y-ph-cang-box4>.y-ph-cang-body4>ul>li>h4{
     font-size: 14px;
