--- a/server/css/wstyle.css
+++ b/server/css/wstyle.css
@@ -2362,10 +2362,47 @@ nav:hover {
 .w-p-power-box3>ul>li{
     float: left;
     width: 33%;
+    height: 170px;
     margin: 5px 0;
+    color: #fff;
+    overflow: hidden;
 }
-.w-p-power-box3>ul>li>img{
-    width: 100%;
+.w-p-power-box3>ul>li:nth-child(1){
+    background: url(../img/phone_power/power_box3_bg1.png) no-repeat;
+    background-size: 100% 100%;
+}
+.w-p-power-box3>ul>li:nth-child(2){
+    background: url(../img/phone_power/power_box3_bg2.png) no-repeat;
+    background-size: 100% 100%;
+}
+.w-p-power-box3>ul>li:nth-child(3){
+    background: url(../img/phone_power/power_box3_bg5.png) no-repeat;
+    background-size: 100% 100%;
+}
+.w-p-power-box3>ul>li:nth-child(4){
+    background: url(../img/phone_power/power_box3_bg4.png) no-repeat;
+    background-size: 100% 100%;
+}
+.w-p-power-box3>ul>li:nth-child(5){
+    background: url(../img/phone_power/power_box3_bg5.png) no-repeat;
+    background-size: 100% 100%;
+}
+.w-p-power-box3>ul>li:nth-child(6){
+    background: url(../img/phone_power/power_box3_bg6.png) no-repeat;
+    background-size: 100% 100%;
+}
+.w-p-power-box3>ul>li>h3{
+    text-align: center;
+    font-weight: bold;
+    font-size: 13px;
+    padding-top:10px; 
+}
+.w-p-power-box3>ul>li>p{
+    text-align: left;
+    font-size: 10px;
+    color: #fff;
+    line-height: 1.25;
+    padding: 5px 5px 5px 8px;
 }
 
 
@@ -2467,7 +2504,6 @@ nav:hover {
     padding-left: 10px;
 }
 
-
 .w-p-it-box2>.w-wh-title {
     width: 100%;
     height: 30px;
@@ -2486,7 +2522,12 @@ nav:hover {
     width: 18px;
     margin-left: 2px;
 }
-.w-p-it-box2>img{
+
+.w-p-it-box2>.w-index-contant{
+    width: 100%;
+}
+
+.w-p-it-box2>.w-index-contant>img{
     width: 100%;
 }
 
@@ -2518,7 +2559,7 @@ nav:hover {
     margin: 5px 0;
 }
 .w-p-it-box3>p{
-    color: #333333;
+    color: #666666;
     font-size: 12px;
     padding: 5px 0;
 }
@@ -2551,11 +2592,19 @@ nav:hover {
     width: 100%;
 }
 .w-p-it-box4>.w-tu>div{
-    float: left;
-    width: 50%;
+    width: 48%;
+    height: 160px;
+    margin-top: 15px;
 }
-.w-p-it-box4>.w-tu>div>img{
-    width: 100%;
+.w-p-it-box4>.w-tu>div>h3{
+    text-align: center;
+    font-size: 13px;
+    padding-top: 5px;
+}
+.w-p-it-box4>.w-tu>div>p{
+    text-align: left;
+    font-size: 10px;
+    padding: 5px;
 }
 
 
@@ -2791,13 +2840,44 @@ nav:hover {
     width: 100%;
 }
 .w-p-farming-box3>.w-tu>div{
-    float: left;
-    width: 50%;
+    width: 48%;
     text-align: center;
     padding: 5px 0;
+    background: #fff;
+    margin-top:10px; 
 }
-.w-p-farming-box3>.w-tu>div>img{
-    width: 95%;
+.w-p-farming-box3>.w-tu>.left{
+    float: left;
+}
+.w-p-farming-box3>.w-tu>.right{
+    float: right;
+}
+.w-p-farming-box3>.w-tu>div>.zi{
+    width: 82%;
+    float: left;
+    height: 100px;
+}
+.w-p-farming-box3>.w-tu>div>.zi>h3{
+    font-size: 13px;
+    font-weight: bold;
+    text-align: left;
+    padding: 5px 0px 0px 5px;
+}
+.w-p-farming-box3>.w-tu>div>.zi>p{
+    font-size: 11px;
+    padding: 5px;
+    line-height: 1.2;
+    text-align: left;
+}
+.w-p-farming-box3>.w-tu>div>.tu{
+    width: 18%;
+    float: left;
+    height: 100px;
+    line-height: 100px;
+    text-align: left;
+}
+.w-p-farming-box3>.w-tu>div>.tu>img{
+    width: 65%;
 }
 
 
