--- a/server/css/ystyle.css
+++ b/server/css/ystyle.css
@@ -2137,10 +2137,10 @@ transform: scale(1.2)
 }
 
 .y-ph-wu-box1>div>.y-ph-wu-body1>ul>li {
-    width: 31%;
+    width: 29%;
     height:150px;
     float: left;
-    margin: 1% 1%;
+    margin: 1.5% 2%;
     box-shadow: 0 0 5px rgb(163, 160, 160, .5);
     background: #fff;
     border-radius: 10px;
@@ -2227,7 +2227,7 @@ transform: scale(1.2)
 }
 .y-ph-wu-box2>ul>li>p{
     color: #fff;
-    font-size: 13px;
+    font-size: 11px;
 }
 .y-ph-wu-box3 {
     width: 100%;
@@ -2350,7 +2350,7 @@ transform: scale(1.2)
 .y-ph-fang-box2>.y-ph-fang-body>ul>li {
     float: left;
     width: 44%;
-    height:280px;
+    height:270px;
     margin: 3% 3%;
     box-shadow: 0px 0px 5px rgb(163, 160, 160, .5);
 }
@@ -2360,11 +2360,12 @@ transform: scale(1.2)
     font-weight: bold;
     color: #333;
     display: block;
+    font-size: 16px;
 }
 .y-ph-fang-box2>.y-ph-fang-body>ul>li>a>p{
     margin: 0 auto;
     padding: 5px 10px;
-    font-size: 12px;
+    font-size: 14px;
     color: #666;
     line-height: 16px;
     width:98%;
@@ -2986,14 +2987,13 @@ transform: scale(1.2)
 }
 
 .y-ph-cang-box2 {
-    width: 100%;
+    width: 94%;
     margin: 0 auto;
     padding: 10px 0px;
 }
 
 .y-ph-cang-box2>.y-ph-cang-return {
-    width: 90%;
-    margin: 0 auto;
+    width: 100%;
 }
 
 .y-ph-cang-box2>.y-ph-cang-return>a {
@@ -3007,9 +3007,8 @@ transform: scale(1.2)
 }
 
 .y-ph-cang-box2>.y-ph-cang-title2 {
-    width: 90%;
+    width: 100%;
     height: 30px;
-    margin: 0 auto;
 }
 
 .y-ph-cang-box2>.y-ph-cang-title2>.title2 {
@@ -3026,23 +3025,57 @@ transform: scale(1.2)
     left: 60px;
 }
 
-.y-ph-cang-box2>.y-ph-cang-body2 {
-    width: 90%;
-    margin: 0 auto;
-}
-.y-ph-cang-box2>.y-ph-cang-body2>ul{
+.y-ph-cang-box2>ul{
     width: 100%;
-    margin: 0 auto;
-}
-.y-ph-cang-box2>.y-ph-cang-body2>ul>li {
-    width: 31%;
-    float: left;
-    margin: 1% 1%;
 }
 
-.y-ph-cang-box2>.y-ph-cang-body2>ul>li>img {
-    width: 100%;
+.y-ph-cang-box2>ul>li{
+    float: left;
+    width: 33%;
+    height: 170px;
+    margin: 5px 0;
+    color: #fff;
+    overflow: hidden;
 }
+.y-ph-cang-box2>ul>li:nth-child(1){
+    background: url(../img/phone_power/power_box3_bg1.png) no-repeat;
+    background-size: 100% 100%;
+}
+.y-ph-cang-box2>ul>li:nth-child(2){
+    background: url(../img/phone_power/power_box3_bg2.png) no-repeat;
+    background-size: 100% 100%;
+}
+.y-ph-cang-box2>ul>li:nth-child(3){
+    background: url(../img/phone_power/power_box3_bg5.png) no-repeat;
+    background-size: 100% 100%;
+}
+.y-ph-cang-box2>ul>li:nth-child(4){
+    background: url(../img/phone_power/power_box3_bg4.png) no-repeat;
+    background-size: 100% 100%;
+}
+.y-ph-cang-box2>ul>li:nth-child(5){
+    background: url(../img/phone_power/power_box3_bg5.png) no-repeat;
+    background-size: 100% 100%;
+}
+.y-ph-cang-box2>ul>li:nth-child(6){
+    background: url(../img/phone_power/power_box3_bg6.png) no-repeat;
+    background-size: 100% 100%;
+}
+.y-ph-cang-box2>ul>li>h3{
+    text-align: center;
+    font-weight: bold;
+    font-size: 13px;
+    padding-top:10px; 
+}
+.y-ph-cang-box2>ul>li>p{
+    text-align: left;
+    font-size: 10px;
+    color: #fff;
+    line-height: 1.25;
+    padding: 5px 5px 5px 8px;
+}
+
+
 
 .y-ph-cang-box3 {
     width: 100%;
@@ -3083,7 +3116,7 @@ transform: scale(1.2)
 .y-ph-cang-box3>.y-ph-cang-body3>ul>li {
     width: 46%;
     float: left;
-    height: 250px;
+    height: 220px;
     margin: 2% 1%;
     background: #fff;
 }
@@ -3091,12 +3124,11 @@ transform: scale(1.2)
     width:100%;
 }
 .y-ph-cang-box3>.y-ph-cang-body3>ul>li>h4{
-
-    font-size: 14px;
+    font-size: 13px;
     padding: 10px 2px;
 }
 .y-ph-cang-box3>.y-ph-cang-body3>ul>li>p{
-    font-size: 12px;
+    font-size: 11px;
     text-align: justify;
     color: #666666;
 }
